--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "bcb5639f",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "import mlflow"
    ]
   },
   {
@@ -9543,7 +9543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "6b5ea5b5",
    "metadata": {},
    "outputs": [],
@@ -9608,15 +9608,15 @@
     "    X = df.drop(['Depression'], axis=1)\n",
     "    y = df['Depression']\n",
     "\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.6, random_state=42)\n",
-    "    X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=0.5, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.7, random_state=42)\n",
+    "    X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=0.66, random_state=42)\n",
     "\n",
     "    return X_train, X_test, X_val, y_train, y_test, y_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "da8c090a",
    "metadata": {},
    "outputs": [],
@@ -9655,275 +9655,30 @@
     "    X_test_final = pd.concat([X_test, X_test_city_df], axis=1)\n",
     "    X_val_final = pd.concat([X_val, X_val_city_df], axis=1)\n",
     "\n",
-    "    return X_train_final, X_test_final, X_val_final, encoder"
+    "    # Aplicar una estandarización a los datos\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train_final)\n",
+    "    X_test_scaled = scaler.transform(X_test_final)\n",
+    "    X_val_scaled = scaler.transform(X_val_final)\n",
+    "\n",
+    "    # Regresar los datos a dataframe\n",
+    "    X_train_final = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
+    "    X_test_final = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
+    "    X_val_final = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
+    "\n",
+    "    return X_train_final, X_test_final, X_val_final, encoder, scaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "803806fe",
+   "execution_count": null,
+   "id": "bd854deb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "c05a07ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(       Gender   Age  Academic Pressure  CGPA  Study Satisfaction  \\\n",
-       " 9610        0  25.0                2.0  6.25                 2.0   \n",
-       " 27775       0  32.0                1.0  8.50                 4.0   \n",
-       " 17972       0  24.0                1.0  9.91                 2.0   \n",
-       " 21111       0  32.0                1.0  9.19                 3.0   \n",
-       " 12700       0  26.0                4.0  9.03                 2.0   \n",
-       " ...       ...   ...                ...   ...                 ...   \n",
-       " 21687       0  28.0                5.0  5.85                 2.0   \n",
-       " 5418        0  22.0                3.0  5.85                 2.0   \n",
-       " 863         0  19.0                3.0  9.60                 3.0   \n",
-       " 15885       0  24.0                3.0  7.48                 4.0   \n",
-       " 23778       1  21.0                2.0  7.21                 3.0   \n",
-       " \n",
-       "        Sleep Duration  Dietary Habits  Degree  \\\n",
-       " 9610                3               1     0.0   \n",
-       " 27775               0               2     3.0   \n",
-       " 17972               2               0     1.0   \n",
-       " 21111               2               2     1.0   \n",
-       " 12700               2               1     1.0   \n",
-       " ...               ...             ...     ...   \n",
-       " 21687               0               2     2.0   \n",
-       " 5418                0               2     1.0   \n",
-       " 863                 3               0     0.0   \n",
-       " 15885               1               2     0.0   \n",
-       " 23778               2               0     2.0   \n",
-       " \n",
-       "        Have you ever had suicidal thoughts ?  Work/Study Hours  ...  \\\n",
-       " 9610                                       1               5.0  ...   \n",
-       " 27775                                      0               9.0  ...   \n",
-       " 17972                                      0               6.0  ...   \n",
-       " 21111                                      1              12.0  ...   \n",
-       " 12700                                      0               0.0  ...   \n",
-       " ...                                      ...               ...  ...   \n",
-       " 21687                                      1               9.0  ...   \n",
-       " 5418                                       0              10.0  ...   \n",
-       " 863                                        0               2.0  ...   \n",
-       " 15885                                      0               0.0  ...   \n",
-       " 23778                                      1               9.0  ...   \n",
-       " \n",
-       "        City_Patna  City_Pune  City_Rajkot  City_Srinagar  City_Surat  \\\n",
-       " 9610          0.0        0.0          0.0            0.0         0.0   \n",
-       " 27775         0.0        0.0          0.0            0.0         0.0   \n",
-       " 17972         0.0        0.0          0.0            0.0         0.0   \n",
-       " 21111         0.0        0.0          0.0            0.0         0.0   \n",
-       " 12700         0.0        0.0          0.0            1.0         0.0   \n",
-       " ...           ...        ...          ...            ...         ...   \n",
-       " 21687         0.0        0.0          1.0            0.0         0.0   \n",
-       " 5418          0.0        0.0          0.0            0.0         0.0   \n",
-       " 863           0.0        0.0          0.0            0.0         0.0   \n",
-       " 15885         0.0        0.0          0.0            0.0         0.0   \n",
-       " 23778         0.0        0.0          0.0            0.0         0.0   \n",
-       " \n",
-       "        City_Thane  City_Vadodara  City_Varanasi  City_Vasai-Virar  \\\n",
-       " 9610          0.0            0.0            0.0               0.0   \n",
-       " 27775         0.0            0.0            0.0               0.0   \n",
-       " 17972         0.0            0.0            0.0               0.0   \n",
-       " 21111         0.0            0.0            0.0               0.0   \n",
-       " 12700         0.0            0.0            0.0               0.0   \n",
-       " ...           ...            ...            ...               ...   \n",
-       " 21687         0.0            0.0            0.0               0.0   \n",
-       " 5418          0.0            0.0            0.0               0.0   \n",
-       " 863           0.0            0.0            0.0               0.0   \n",
-       " 15885         0.0            0.0            0.0               0.0   \n",
-       " 23778         0.0            0.0            0.0               0.0   \n",
-       " \n",
-       "        City_Visakhapatnam  \n",
-       " 9610                  0.0  \n",
-       " 27775                 0.0  \n",
-       " 17972                 0.0  \n",
-       " 21111                 0.0  \n",
-       " 12700                 0.0  \n",
-       " ...                   ...  \n",
-       " 21687                 0.0  \n",
-       " 5418                  1.0  \n",
-       " 863                   0.0  \n",
-       " 15885                 0.0  \n",
-       " 23778                 0.0  \n",
-       " \n",
-       " [11103 rows x 41 columns],\n",
-       "        Gender   Age  Academic Pressure  CGPA  Study Satisfaction  \\\n",
-       " 6542        1  28.0                1.0  8.93                 3.0   \n",
-       " 7532        1  20.0                4.0  5.57                 2.0   \n",
-       " 16838       0  24.0                2.0  5.57                 3.0   \n",
-       " 17500       1  25.0                3.0  8.25                 2.0   \n",
-       " 16418       1  18.0                3.0  8.73                 5.0   \n",
-       " ...       ...   ...                ...   ...                 ...   \n",
-       " 11759       0  31.0                3.0  9.36                 4.0   \n",
-       " 20741       0  28.0                2.0  8.90                 4.0   \n",
-       " 20120       0  20.0                5.0  7.22                 1.0   \n",
-       " 9255        0  29.0                2.0  9.60                 4.0   \n",
-       " 24112       0  19.0                1.0  5.74                 5.0   \n",
-       " \n",
-       "        Sleep Duration  Dietary Habits  Degree  \\\n",
-       " 6542                0               0     2.0   \n",
-       " 7532                2               0     1.0   \n",
-       " 16838               0               2     1.0   \n",
-       " 17500               2               1     2.0   \n",
-       " 16418               2               1     0.0   \n",
-       " ...               ...             ...     ...   \n",
-       " 11759               2               1     2.0   \n",
-       " 20741               3               0     2.0   \n",
-       " 20120               3               2     0.0   \n",
-       " 9255                2               2     3.0   \n",
-       " 24112               3               0     0.0   \n",
-       " \n",
-       "        Have you ever had suicidal thoughts ?  Work/Study Hours  ...  \\\n",
-       " 6542                                       1              11.0  ...   \n",
-       " 7532                                       0               7.0  ...   \n",
-       " 16838                                      1               6.0  ...   \n",
-       " 17500                                      1              11.0  ...   \n",
-       " 16418                                      1               8.0  ...   \n",
-       " ...                                      ...               ...  ...   \n",
-       " 11759                                      0               6.0  ...   \n",
-       " 20741                                      0               0.0  ...   \n",
-       " 20120                                      1              11.0  ...   \n",
-       " 9255                                       1               5.0  ...   \n",
-       " 24112                                      0               8.0  ...   \n",
-       " \n",
-       "        City_Patna  City_Pune  City_Rajkot  City_Srinagar  City_Surat  \\\n",
-       " 6542          0.0        0.0          0.0            0.0         0.0   \n",
-       " 7532          0.0        0.0          0.0            0.0         0.0   \n",
-       " 16838         0.0        0.0          0.0            0.0         0.0   \n",
-       " 17500         0.0        0.0          0.0            0.0         0.0   \n",
-       " 16418         0.0        0.0          0.0            0.0         0.0   \n",
-       " ...           ...        ...          ...            ...         ...   \n",
-       " 11759         0.0        0.0          0.0            1.0         0.0   \n",
-       " 20741         1.0        0.0          0.0            0.0         0.0   \n",
-       " 20120         0.0        0.0          1.0            0.0         0.0   \n",
-       " 9255          0.0        0.0          0.0            0.0         0.0   \n",
-       " 24112         0.0        0.0          0.0            0.0         0.0   \n",
-       " \n",
-       "        City_Thane  City_Vadodara  City_Varanasi  City_Vasai-Virar  \\\n",
-       " 6542          0.0            0.0            0.0               0.0   \n",
-       " 7532          0.0            0.0            0.0               0.0   \n",
-       " 16838         0.0            0.0            0.0               0.0   \n",
-       " 17500         1.0            0.0            0.0               0.0   \n",
-       " 16418         0.0            0.0            0.0               0.0   \n",
-       " ...           ...            ...            ...               ...   \n",
-       " 11759         0.0            0.0            0.0               0.0   \n",
-       " 20741         0.0            0.0            0.0               0.0   \n",
-       " 20120         0.0            0.0            0.0               0.0   \n",
-       " 9255          1.0            0.0            0.0               0.0   \n",
-       " 24112         0.0            0.0            0.0               0.0   \n",
-       " \n",
-       "        City_Visakhapatnam  \n",
-       " 6542                  0.0  \n",
-       " 7532                  0.0  \n",
-       " 16838                 0.0  \n",
-       " 17500                 0.0  \n",
-       " 16418                 0.0  \n",
-       " ...                   ...  \n",
-       " 11759                 0.0  \n",
-       " 20741                 0.0  \n",
-       " 20120                 0.0  \n",
-       " 9255                  0.0  \n",
-       " 24112                 0.0  \n",
-       " \n",
-       " [8327 rows x 41 columns],\n",
-       "        Gender   Age  Academic Pressure  CGPA  Study Satisfaction  \\\n",
-       " 11156       0  32.0                5.0  5.88                 4.0   \n",
-       " 11987       0  25.0                4.0  5.37                 2.0   \n",
-       " 16988       1  31.0                4.0  5.59                 3.0   \n",
-       " 10076       0  33.0                3.0  9.05                 4.0   \n",
-       " 24345       1  31.0                5.0  9.19                 3.0   \n",
-       " ...       ...   ...                ...   ...                 ...   \n",
-       " 15531       1  19.0                3.0  7.88                 4.0   \n",
-       " 3525        1  34.0                3.0  9.95                 4.0   \n",
-       " 4078        0  23.0                4.0  7.51                 4.0   \n",
-       " 27887       0  32.0                4.0  9.19                 1.0   \n",
-       " 1179        1  24.0                3.0  8.65                 3.0   \n",
-       " \n",
-       "        Sleep Duration  Dietary Habits  Degree  \\\n",
-       " 11156               2               2     1.0   \n",
-       " 11987               2               2     2.0   \n",
-       " 16988               2               2     1.0   \n",
-       " 10076               0               0     1.0   \n",
-       " 24345               1               2     1.0   \n",
-       " ...               ...             ...     ...   \n",
-       " 15531               0               2     0.0   \n",
-       " 3525                3               2     1.0   \n",
-       " 4078                0               1     1.0   \n",
-       " 27887               1               0     2.0   \n",
-       " 1179                2               2     1.0   \n",
-       " \n",
-       "        Have you ever had suicidal thoughts ?  Work/Study Hours  ...  \\\n",
-       " 11156                                      1               9.0  ...   \n",
-       " 11987                                      1               6.0  ...   \n",
-       " 16988                                      1               4.0  ...   \n",
-       " 10076                                      1              10.0  ...   \n",
-       " 24345                                      1               6.0  ...   \n",
-       " ...                                      ...               ...  ...   \n",
-       " 15531                                      1              10.0  ...   \n",
-       " 3525                                       1               2.0  ...   \n",
-       " 4078                                       0               6.0  ...   \n",
-       " 27887                                      0               7.0  ...   \n",
-       " 1179                                       0              11.0  ...   \n",
-       " \n",
-       "        City_Patna  City_Pune  City_Rajkot  City_Srinagar  City_Surat  \\\n",
-       " 11156         1.0        0.0          0.0            0.0         0.0   \n",
-       " 11987         0.0        0.0          0.0            0.0         0.0   \n",
-       " 16988         0.0        0.0          0.0            0.0         0.0   \n",
-       " 10076         0.0        0.0          0.0            0.0         0.0   \n",
-       " 24345         0.0        0.0          0.0            0.0         0.0   \n",
-       " ...           ...        ...          ...            ...         ...   \n",
-       " 15531         0.0        0.0          0.0            0.0         0.0   \n",
-       " 3525          0.0        0.0          0.0            0.0         0.0   \n",
-       " 4078          0.0        0.0          1.0            0.0         0.0   \n",
-       " 27887         0.0        0.0          1.0            0.0         0.0   \n",
-       " 1179          0.0        0.0          0.0            0.0         0.0   \n",
-       " \n",
-       "        City_Thane  City_Vadodara  City_Varanasi  City_Vasai-Virar  \\\n",
-       " 11156         0.0            0.0            0.0               0.0   \n",
-       " 11987         0.0            0.0            0.0               0.0   \n",
-       " 16988         0.0            0.0            0.0               0.0   \n",
-       " 10076         0.0            0.0            0.0               0.0   \n",
-       " 24345         0.0            0.0            0.0               0.0   \n",
-       " ...           ...            ...            ...               ...   \n",
-       " 15531         0.0            0.0            0.0               0.0   \n",
-       " 3525          0.0            0.0            0.0               0.0   \n",
-       " 4078          0.0            0.0            0.0               0.0   \n",
-       " 27887         0.0            0.0            0.0               0.0   \n",
-       " 1179          0.0            0.0            0.0               0.0   \n",
-       " \n",
-       "        City_Visakhapatnam  \n",
-       " 11156                 0.0  \n",
-       " 11987                 0.0  \n",
-       " 16988                 0.0  \n",
-       " 10076                 0.0  \n",
-       " 24345                 0.0  \n",
-       " ...                   ...  \n",
-       " 15531                 0.0  \n",
-       " 3525                  0.0  \n",
-       " 4078                  0.0  \n",
-       " 27887                 0.0  \n",
-       " 1179                  0.0  \n",
-       " \n",
-       " [8328 rows x 41 columns],\n",
-       " OneHotEncoder(drop='first', handle_unknown='ignore', sparse_output=False))"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preprocessor(X_train, X_test, X_val)"
+    "mlflow.data.from_numpy(X_train.data, targets=y_train, name=\"depression_train\")\n",
+    "mlflow.data.from_numpy(X_val.data, targets=y_val, name=\"depression_test\")\n",
+    "mlflow.data.from_numpy(X_val.data, targets=y_val, name=\"depression_val\")"
    ]
   }
  ],
