[feat]: preprocessor has been completely made into a function

--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "bcb5639f",
    "metadata": {},
    "outputs": [],
@@ -9543,7 +9543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6b5ea5b5",
    "metadata": {},
    "outputs": [],
@@ -9552,7 +9552,7 @@
     "\n",
     "def clean_data(df):\n",
     "    # 1. Eliminar valores nulos\n",
-    "    df.dropna(inplace=True)\n",
+    "    df = df.dropna()\n",
     "\n",
     "\n",
     "    # 2. Filtrado de categorías que otorgan poca información debido a su baja prevalencia\n",
@@ -9592,7 +9592,7 @@
     "    \"B.Com\": \"Undergraduate\", \"B.Arch\": \"Undergraduate\", \"B.Tech\": \"Undergraduate\", \"BBA\": \"Undergraduate\",\n",
     "    \"M.Tech\": \"Postgraduate\", \"M.Ed\": \"Postgraduate\", \"MSc\": \"Postgraduate\", \"M.Pharm\": \"Postgraduate\",\n",
     "    \"MCA\": \"Postgraduate\", \"MA\": \"Postgraduate\", \"MBA\": \"Postgraduate\", \"M.Com\": \"Postgraduate\", \"MHM\": \"Postgraduate\",\n",
-    "    \"PhD\": \"Doctorate\", \"MD\": \"Doctorate\", \"MBBS\": \"Doctorate\", \"LLM\": \"Doctorate\"\n",
+    "    \"PhD\": \"Doctorate\", \"MD\": \"Doctorate\", \"MBBS\": \"Doctorate\", \"LLM\": \"Doctorate\", \"ME\": \"Postgraduate\"\n",
     "    }\n",
     "    orden_degree = {\"Secondary\": 0, \"Undergraduate\": 1, \"Postgraduate\": 2, \"Doctorate\": 3}\n",
     "    orden_alimentos = {'Healthy': 0, 'Unhealthy': 1, 'Moderate': 2}\n",
@@ -9604,19 +9604,33 @@
     "    df['Sleep Duration'] = df['Sleep Duration'].map(orden_siesta)\n",
     "\n",
     "\n",
-    "    # 6. Train-Test-Val Split (60-20-20)\n",
+    "    # 6. Train-Test-Val Split (70-20-10)\n",
     "    X = df.drop(['Depression'], axis=1)\n",
     "    y = df['Depression']\n",
     "\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.7, random_state=42)\n",
     "    X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=0.66, random_state=42)\n",
     "\n",
+    "    # Guardar las variables \n",
+    "    X_train.to_csv(r'..\\data\\interim\\X_train.csv', index=False)\n",
+    "    X_test.to_csv(r'..\\data\\interim\\X_test.csv', index=False)\n",
+    "    X_val.to_csv(r'..\\data\\interim\\X_val.csv', index=False)\n",
+    "    \n",
+    "    y_train.to_csv(r'..\\data\\processed\\y_train.csv', index=False)\n",
+    "    y_test.to_csv(r'..\\data\\processed\\y_test.csv', index=False)\n",
+    "    y_val.to_csv(r'..\\data\\processed\\y_val.csv', index=False)\n",
+    "    \n",
+    "    # Convertir las variables dependientes en NumPy arrays\n",
+    "    y_train = y_train.to_numpy().ravel()\n",
+    "    y_test = y_test.to_numpy().ravel()\n",
+    "    y_val = y_val.to_numpy().ravel()   \n",
+    "\n",
     "    return X_train, X_test, X_val, y_train, y_test, y_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "da8c090a",
    "metadata": {},
    "outputs": [],
@@ -9661,12 +9675,36 @@
     "    X_test_scaled = scaler.transform(X_test_final)\n",
     "    X_val_scaled = scaler.transform(X_val_final)\n",
     "\n",
-    "    # Regresar los datos a dataframe\n",
-    "    X_train_final = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
-    "    X_test_final = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
-    "    X_val_final = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
+    "    # Regresar los datos a dataframe y guardarlos\n",
+    "    X_train_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
+    "    X_test_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
+    "    X_val_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
     "\n",
-    "    return X_train_final, X_test_final, X_val_final, encoder, scaler"
+    "    X_train_df.to_csv(r'..\\data\\processed\\X_train.csv', index=False)\n",
+    "    X_test_df.to_csv(r'..\\data\\processed\\X_test.csv', index=False)\n",
+    "    X_val_df.to_csv(r'..\\data\\processed\\X_val.csv', index=False)\n",
+    "\n",
+    "    return X_train_scaled, X_test_scaled, X_val_scaled, encoder, scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "79b896c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ede7ce9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, X_val, encoder, scaler = preprocessor(X_train, X_test, X_val)"
    ]
   },
   {
@@ -9676,9 +9714,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlflow.data.from_numpy(X_train.data, targets=y_train, name=\"depression_train\")\n",
-    "mlflow.data.from_numpy(X_val.data, targets=y_val, name=\"depression_test\")\n",
-    "mlflow.data.from_numpy(X_val.data, targets=y_val, name=\"depression_val\")"
+    "# mlflow.data.from_numpy(X_train.data, targets=y_train, name=\"depression_train\")\n",
+    "# mlflow.data.from_numpy(X_test.data, targets=y_test, name=\"depression_test\")\n",
+    "# mlflow.data.from_numpy(X_val.data, targets=y_val, name=\"depression_val\")"
    ]
   }
  ],
