[fix]: i dont know what this fixed honestly, something with svc and lr. commit made on behalf of another teammate

--- a/notebooks/03_training_model.ipynb
+++ b/notebooks/03_training_model.ipynb
@@ -60,6 +60,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76bbc203",
+   "metadata": {},
+   "source": [
+    "# <font color= #bbc28d>*Datos y Data Readiness* </font>\n",
+    "En esta etapa se siguió trabajando con la misma base de datos la cuál intenta clasificiar a los jóvenes estudiantes en dos categorías: aquellos que presentan síntomas de depresión y auqellos que no, siendo esta columna nuestro objetivo. Aplicando diferentes transformaciones y limpiezas para preparar los datos antes del modelado. Las acciones principales fueron:\n",
+    "\n",
+    "#### <font color=#99c0c4>1. *Tratamiento de datos faltantes* </font>\n",
+    "- Se detectó que la columna Financial Stress contenía 3 valores nulos.\n",
+    "- Dado que era una cantidad pequeña en comparación con el total de registros, se decidió eliminar esas filas.\n",
+    "\n",
+    "#### <font color=#99c0c4>2. *Filtrado de datos categóricos* </font>\n",
+    "- Se identificaron variables con categorías poco representativas (con una o dos filas por valor), como City, Dietary Habits, Sleep Duration y Degree.\n",
+    "- Se eliminaron registros aislados para reducir ruido y mejorar la representatividad de los datos.\n",
+    "\n",
+    "#### <font color=#99c0c4>3. *Ajuste del dataset al enfoque del proyecto* </font>\n",
+    "- Se filtraron los registros de Age para conservar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "97b7b739",
    "metadata": {},
    "source": [
@@ -170,12 +190,14 @@
     "\n",
     "    mlflow.sklearn.autolog()\n",
     "\n",
-    "    training_dataset = mlflow.data.from_numpy(X_train.data, targets=Y_train, name='Train Data')\n",
-    "    validation_dataset = mlflow.data.from_numpy(X_test.data, targets=Y_test, name='Test Data')\n",
+    "    training_dataset = mlflow.data.from_numpy(X_train, targets=Y_train, name='Train Data')\n",
+    "    validation_dataset = mlflow.data.from_numpy(X_test, targets=Y_test, name='Test Data')\n",
+    "\n",
     "\n",
     "    def objective_lr(trial: optuna.trial.Trial):\n",
     "        params = {\n",
-    "            'penalty': trial.suggest_categorical('penalty', ['l2','l1','elasticnet'])\n",
+    "            'penalty': trial.suggest_categorical('penalty', ['l2','l1','elasticnet']),\n",
+    "            'solver': 'saga'\n",
     "        }\n",
     "\n",
     "        with mlflow.start_run(nested=True):\n",
@@ -211,7 +233,7 @@
     "    lr_study = optuna.create_study(direction='maximize', sampler=sampler)\n",
     "\n",
     "    with mlflow.start_run(run_name='Logisitc Regression (Optuna)', nested=True):\n",
-    "        lr_study.optimize(objective_lr, n_trials=3)\n",
+    "        lr_study.optimize(objective_lr, n_trials=2)\n",
     "    \n",
     "    best_params_lr = lr_study.best_params\n",
     "\n",
@@ -237,8 +259,9 @@
     "\n",
     "    mlflow.sklearn.autolog()\n",
     "\n",
-    "    training_dataset = mlflow.data.from_numpy(X_train.data, targets=Y_train, name='Train Data')\n",
-    "    validation_dataset = mlflow.data.from_numpy(X_test.data, targets=Y_test, name='Test Data')\n",
+    "    training_dataset = mlflow.data.from_numpy(X_train, targets=Y_train, name='Train Data')\n",
+    "    validation_dataset = mlflow.data.from_numpy(X_test, targets=Y_test, name='Test Data')\n",
+    "\n",
     "\n",
     "    def objective_svc(trial: optuna.trial.Trial):\n",
     "        params = {\n",
@@ -273,12 +296,13 @@
     "            )\n",
     "        \n",
     "        return f1\n",
+    "\n",
     "    \n",
     "    sampler = TPESampler(seed=42)\n",
     "    svc_study = optuna.create_study(direction='maximize', sampler=sampler)\n",
     "\n",
     "    with mlflow.start_run(run_name='Support Vector Classifier (Optuna)', nested=True):\n",
-    "        svc_study.optimize(objective_svc, n_trials=3)\n",
+    "        svc_study.optimize(objective_svc, n_trials=2)\n",
     "    \n",
     "    best_params_svc = svc_study.best_params\n",
     "\n",
